fix header and sidebar z-indexing

--- a/documentation/source/_themes/fontPartsTheme/static/fontparts.css
+++ b/documentation/source/_themes/fontPartsTheme/static/fontparts.css
@@ -77,7 +77,7 @@ hr {
 #header, #footer {
   height: 3rem;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   background: black;
   font-family: "Source Code Pro", "Menlo", "Andale Mono", "Monaco", "Consolas", "Courier";
@@ -244,6 +244,11 @@ hr {
   overflow-y: auto;
   max-height: calc(100vh - 4rem);
   padding-bottom: 4rem;
+}
+@media screen and (max-width: 800px) {
+  .sticky-wrapper {
+    max-height: none;
+  }
 }
 
 #content {
